[project]
name = "story-time"
version = "0.1.0"
description = ""
authors = [
    {name = "Grisha Szep",email = "grisha.szep@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "realtimestt (>=0.3.95,<0.4.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "diffusers (>=0.32.2,<0.33.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "accelerate (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"

