[project]
authors = [
  {name = "Grisha Szep", email = "grisha.szep@gmail.com"},
]
dependencies = [
  "torch (>=2.6.0,<3.0.0)",
  "torchaudio (>=2.6.0,<3.0.0)",
  "realtimestt (>=0.3.95,<0.4.0)",
  "torchvision (>=0.21.0,<0.22.0)",
  "diffusers (>=0.32.2,<0.33.0)",
  "transformers (>=4.49.0,<5.0.0)",
  "accelerate (>=1.4.0,<2.0.0)",
]
description = ""
name = "story-time"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"

[tool.black]
include = '\.pyi?$'
line-length = 140

[tool.isort]
line_length = 140
profile = "black"

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
explicit_package_bases = true
files = ["."]
follow_imports = "normal"
ignore_missing_imports = true
local_partial_types = true
namespace_packages = true
python_version = "3.11"
show_column_numbers = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
